objects/EUR_CRM_JB_Template_Line__c.object
<CustomObject>
    <description>PREU JB Data Model</description>
    <fields>
        <fullName>EUR_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality-Size</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipName>Template_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Activation__c</fullName>
        <label>Activation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Back_of_Bar_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ON Trade - Visibility criteria</description>
        <label>Back of Bar Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Back_of_Bar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On Trade PVA - Visibility Criteria</description>
        <label>Back of Bar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_By_Glass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>By the Glass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Cabinet_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ON Trade - Visibility criteria</description>
        <label>Cabinet Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Display_Fridge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ON Trade - Visibility criteria</description>
        <label>Display Fridge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Displayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Displayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Exclusive_SKU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusive SKU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Facings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_First_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_House_Pour_Picklist__c</fullName>
        <label>House Pour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_House_Pour__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For use with PR AT Contract Compliance Templates</description>
        <label>House Pour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Listed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For use with PR AT Contract Compliance Templates</description>
        <label>Listed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Listing_Status_KAM__c</fullName>
        <label>Listing Status KAM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>SL</fullName>
                </value>
                <value>
                    <fullName>ZL</fullName>
                </value>
                <value>
                    <fullName>ZL/SL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Low_Stock_Guidance__c</fullName>
        <label>Low Stock Guidance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Menu_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Menu Feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_On_the_Menu__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ON Trade - Visibility criteria</description>
        <label>On the Menu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Oversized_bottles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oversized bottles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POSM_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POSM Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POS_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ON Trade - Visibility criteria</description>
        <label>POS Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Premium_Pouring__c</fullName>
        <label>Premium Pouring</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBC1</fullName>
                </value>
                <value>
                    <fullName>TBC2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Presence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Prestige_Pouring__c</fullName>
        <label>Prestige Pouring</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBC1</fullName>
                </value>
                <value>
                    <fullName>TBC2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Price_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ON Trade - Activation criteria</description>
        <label>Price Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Is_active__c</fullName>
        <formula>IF(
	OR(
		AND(
			NOT(ISBLANK( EUR_JB_Brand_Quality__c)), 
 			EUR_JB_Brand_Quality__r.EUR_CRM_Active__c
		),
		AND(
			NOT(ISBLANK(EUR_Brand_Quality_Size__c)),
			EUR_Brand_Quality_Size__r.EUR_CRM_Active__c
		)
	),
	true,
	false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Promoted_Picklist__c</fullName>
        <label>Promoted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Promoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Retail_Selling_Price_Recommended__c</fullName>
        <label>Retail Selling Price (Recommended)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Seasonal_Listing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seasonal Listing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Shelf_Placement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shelf Placement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Top_of_Counter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ON Trade - Visibility criteria</description>
        <label>Top of Counter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Value_Added_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ON Trade - Activation criteria</description>
        <label>Value Added Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visibility__c</fullName>
        <label>Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipName>Template_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_JB_CRM_Template__c</fullName>
        <label>Template</label>
        <referenceTo>EUR_CRM_JB_Template__c</referenceTo>
        <relationshipName>Template_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_JB_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_JB_Listing__c</fullName>
        <label>Presence / Listing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>Contracted</fullName>
                </value>
                <value>
                    <fullName>Recommended</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_JB_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipLabel>Template Lines</relationshipLabel>
        <relationshipName>Template_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Template Line (EU)</label>
    <listViews>
        <fullName>EUR_BE_Template_Line</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_JB_CRM_Template__c</columns>
        <columns>EUR_Brand_Quality_Size__c</columns>
        <columns>EUR_JB_Listing__c</columns>
        <columns>EUR_CRM_Visibility__c</columns>
        <columns>EUR_CRM_Activation__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_BE_Wholesaler_Template_Line</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_BE_Off_Trade_Template_Line</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_BE_On_Trade_Template_Line</value>
        </filters>
        <label>EUR BE Template Line</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_ALL_Template_Line_View</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_JB_External_ID__c</columns>
        <columns>EUR_JB_Brand_Quality__c</columns>
        <columns>EUR_CRM_Presence__c</columns>
        <columns>EUR_Brand_Quality_Size__c</columns>
        <columns>EUR_JB_Listing__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_BG_Off_Trade_Template_Line</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_BG_On_Trade_Template_Line</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_BG_Wholesaler_Template_Line</value>
        </filters>
        <label>EUR BG ALL Template Line View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_OFF_Trade_Template_Line_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_JB_External_ID__c</columns>
        <columns>EUR_Brand_Quality_Size__c</columns>
        <columns>EUR_JB_Listing__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_BG_Off_Trade_Template_Line</value>
        </filters>
        <label>EUR BG OFF Trade Template Line View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_ON_Trade_Template_Line_View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_JB_External_ID__c</columns>
        <columns>EUR_JB_Brand_Quality__c</columns>
        <columns>EUR_CRM_Presence__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_BG_On_Trade_Template_Line</value>
        </filters>
        <label>EUR BG ON Trade Template Line View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_Wholesalers_Template_Line_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_JB_External_ID__c</columns>
        <columns>EUR_Brand_Quality_Size__c</columns>
        <columns>EUR_JB_Listing__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_BG_Wholesaler_Template_Line</value>
        </filters>
        <label>EUR BG Wholesalers Template Line View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CCA_Template_Line</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_JB_CRM_Template__c</columns>
        <columns>EUR_Brand_Quality_Size__c</columns>
        <columns>EUR_JB_Listing__c</columns>
        <columns>EUR_CRM_Visibility__c</columns>
        <columns>EUR_CRM_Activation__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_CCA_On_Trade_Listing_Template_Line,EUR_CRM_JB_Template_Line__c.EUR_CCA_Wholesaler_Listing_Template_Line</value>
        </filters>
        <label>EUR CCA Template Line</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CCA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_AT_Template_Line_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_JB_External_ID__c</columns>
        <columns>EUR_JB_Brand_Quality__c</columns>
        <columns>EUR_CRM_Presence__c</columns>
        <columns>EUR_Brand_Quality_Size__c</columns>
        <columns>EUR_JB_Listing__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_AT_ON_Trade_Template_Line,EUR_CRM_JB_Template_Line__c.EUR_AT_Wholesaler_Template_Line</value>
        </filters>
        <label>EUR AT Template Line View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BE_ALL_Template_Line_View</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_JB_External_ID__c</columns>
        <columns>EUR_JB_Brand_Quality__c</columns>
        <columns>EUR_CRM_Presence__c</columns>
        <columns>EUR_Brand_Quality_Size__c</columns>
        <columns>EUR_JB_Listing__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_BE_Off_Trade_Template_Line</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_BE_Wholesaler_Template_Line</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_BE_On_Trade_Template_Line</value>
        </filters>
        <label>EUR BE ALL Template Line View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_DB_ALL_Template_Line_View</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_JB_External_ID__c</columns>
        <columns>EUR_JB_Brand_Quality__c</columns>
        <columns>EUR_Brand_Quality_Size__c</columns>
        <columns>EUR_JB_Listing__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_DB_Off_Trade_Listing_Template_Line</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_DB_On_Trade_Listing_Template_Line</value>
        </filters>
        <label>EUR DB ALL Template Line View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_IDL_ALL_Template_Line_View</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_JB_External_ID__c</columns>
        <columns>EUR_JB_Brand_Quality__c</columns>
        <columns>EUR_Brand_Quality_Size__c</columns>
        <columns>EUR_JB_Listing__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_IDL_Off_Trade_Listing_Template_Line</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_IDL_On_Trade_Listing_Template_Line</value>
        </filters>
        <label>EUR IDL ALL Template Line View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_IDL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_NL_ALL_Template_Line_View</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_JB_External_ID__c</columns>
        <columns>EUR_JB_Brand_Quality__c</columns>
        <columns>EUR_CRM_Presence__c</columns>
        <columns>EUR_Brand_Quality_Size__c</columns>
        <columns>EUR_JB_Listing__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_NL_On_Trade_Template_Line</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_NL_Off_Trade_Template_Line</value>
        </filters>
        <label>EUR NL ALL Template Line View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_PT_ALL_Template_Line_View</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_JB_External_ID__c</columns>
        <columns>EUR_JB_Brand_Quality__c</columns>
        <columns>EUR_Brand_Quality_Size__c</columns>
        <columns>EUR_JB_Listing__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_PT_Off_Trade_Template_Line</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_PT_On_Trade_Template_Line</value>
        </filters>
        <label>EUR PT ALL Template Line View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_PT_OFF_Trade_Template_Line_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_JB_External_ID__c</columns>
        <columns>EUR_JB_Brand_Quality__c</columns>
        <columns>EUR_JB_Listing__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_PT_Off_Trade_Template_Line</value>
        </filters>
        <label>EUR PT OFF Trade Template Line View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_PT_ON_Trade_Template_Line_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_JB_External_ID__c</columns>
        <columns>EUR_JB_Brand_Quality__c</columns>
        <columns>EUR_JB_Listing__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_PT_On_Trade_Template_Line</value>
        </filters>
        <label>EUR PT ON Trade Template Line View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DE_ALL_Template_Line_View</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_DE_WS_Template_Line</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_DE_OFF_Trade_Template_Line</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_JB_Template_Line__c.EUR_DE_ON_Trade_Template_Line</value>
        </filters>
        <label>EUR DE ALL Template Line View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TLI-{00000000}</displayFormat>
        <label>Template Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Line (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Off_Trade_Template_Line</fullName>
        <active>true</active>
        <label>EUR AO Off Trade Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AO_On_Trade_Template_Line</fullName>
        <active>true</active>
        <label>EUR AO On Trade Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_ON_Trade_Template_Line</fullName>
        <active>true</active>
        <label>EUR AT ON-Trade Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Wholesaler_Template_Line</fullName>
        <active>true</active>
        <label>EUR AT Wholesaler Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Off_Trade_Template_Line</fullName>
        <active>true</active>
        <label>EUR BE Off Trade Template Line Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_On_Trade_Template_Line</fullName>
        <active>true</active>
        <label>EUR BE On Trade Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Wholesaler_Template_Line</fullName>
        <active>true</active>
        <label>EUR BE Wholesaler Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Off_Trade_Template_Line</fullName>
        <active>true</active>
        <label>EUR BG Off Trade Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_On_Trade_Template_Line</fullName>
        <active>true</active>
        <label>EUR BG On Trade Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Wholesaler_Template_Line</fullName>
        <active>true</active>
        <label>EUR BG Wholesaler Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CCA_Off_Trade_Listing_Template_Line</fullName>
        <active>true</active>
        <label>EUR CCA Off Trade Listing Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CCA_On_Trade_Listing_Template_Line</fullName>
        <active>true</active>
        <label>EUR CCA On Trade Listing Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CCA_Wholesaler_Listing_Template_Line</fullName>
        <active>true</active>
        <label>EUR CCA Wholesaler Listing Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_On_Trade_Template_Line</fullName>
        <active>true</active>
        <label>EUR CH On Trade Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Wholesaler_Template_Line</fullName>
        <active>true</active>
        <label>EUR CH Wholesaler Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DB_Off_Trade_Listing_Template_Line</fullName>
        <active>true</active>
        <label>EUR DB Off Trade Listing Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DB_On_Trade_Listing_Template_Line</fullName>
        <active>true</active>
        <label>EUR DB On Trade Listing Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Trade_Template_Line</fullName>
        <active>true</active>
        <label>EUR DE OFF-Trade Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_ON_Trade_Template_Line</fullName>
        <active>true</active>
        <label>EUR DE ON-Trade Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_WS_Template_Line</fullName>
        <active>true</active>
        <label>EUR DE WS Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_OFF_Trade_Template_Line</fullName>
        <active>true</active>
        <description>Record Type for DK OFF Trade Accounts&apos; Templates Lines</description>
        <label>EUR DK OFF Trade Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_ON_Trade_Template_Line</fullName>
        <active>true</active>
        <description>Record Type for DK On Trade Account&apos;s Template Lines</description>
        <label>EUR DK ON Trade Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DO_Off_Trade_Listing_Template_Line</fullName>
        <active>true</active>
        <label>EUR DO Off Trade Listing Template Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DO_On_Trade_Listing_Template_Line</fullName>
        <active>true</active>
        <label>EUR DO On Trade Listing Template Line</label>
    </recordTypes>
</CustomObject>